src/tests/ci/assignment_3_arrays_io_llvm/invalid_semantic/01_array_initializer_wrong_size.c
int main() {
    int values[3] = {1, 2};
    return 0;
}
